create tests e2e enviroments and authentication middleware

--- a/package.json
+++ b/package.json
@@ -7,14 +7,19 @@
     "dev": "tsx watch src/server.ts",
     "build": "tsup src --out-dir build",
     "start": "node build/server.js",
-    "test": "vitest run ",
-    "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage"
+    "test": "vitest run --dir src/use-cases",
+    "test:e2e": "vitest run --dir src/http",
+    "test:watch": "vitest --dir src/use-cases",
+    "test:coverage": "vitest run --coverage",
+    "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
+    "test:create-prisma-environment": "npm link ./prisma/vitest-environment-prisma",
+    "test:install-prisma-environment": "npm link vitest-environment-prisma"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/jwt": "6.7.1",
     "@prisma/client": "4.11.0",
     "bcryptjs": "2.4.3",
     "dotenv": "16.0.3",
@@ -24,9 +29,12 @@
   "devDependencies": {
     "@types/bcryptjs": "2.4.2",
     "@types/node": "^18.15.8",
+    "@types/supertest": "2.0.12",
     "@vitest/coverage-c8": "0.29.7",
     "dayjs": "1.11.7",
+    "npm-run-all": "4.1.5",
     "prisma": "4.11.0",
+    "supertest": "6.3.3",
     "tsup": "^6.7.0",
     "tsx": "^3.12.6",
     "typescript": "^5.0.2",
