created test e2e for register and authenticate

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "node build/server.js",
     "test": "vitest run --dir src/use-cases",
     "test:e2e": "vitest run --dir src/http",
+    "test:e2e:watch": "vitest --dir src/http",
     "test:watch": "vitest --dir src/use-cases",
     "test:coverage": "vitest run --coverage",
     "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
