--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/cookie": "8.3.0",
     "@fastify/jwt": "6.7.1",
     "@prisma/client": "4.11.0",
     "bcryptjs": "2.4.3",
