--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -12,10 +12,10 @@ jobs:
         image: bitnami/postgresql
         ports:
           - 5433:5432
-        environment:
-          - POSTGRES_USERNAME=docker
-          - POSTGRES_PASSWORD=docker
-          - POSTGRES_DATABASE=apisolid
+        env:
+          POSTGRES_USERNAME: docker
+          POSTGRES_PASSWORD: docker
+          POSTGRES_DATABASE: apisolid
 
     steps:
       - uses: actions/checkout@v3
